# FreeCycle

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: BUILD_MCP_SERVER_PROMPT.md  freecycle-eval.skill  freecycle-eval.skill.md  mcp-server-upstream-diagnostic-report-2026-03-16.md
docs/freecycle-eval-skill/: freecycle-eval.skill  freecycle-eval.skill.md
docs/freecycle-eval-skill/freecycle-eval/: SKILL.md
docs/freecycle-eval-skill/freecycle-eval.references/: benchmarking.md  integration-templates.md  persistent-code.md  verification-checklist.md
docs/freecycle-eval-skill/freecycle-eval/references/: benchmarking.md  cloud-pricing.md  integration-templates.md  persistent-code.md  verification-checklist.md
mcp-server/: RAG_INDEX.md  README.md  freecycle-mcp.config.json  freecycle_client.py  package-lock.json  package.json  test.ts
mcp-server/references/: config-and-timeouts.md  failure-recovery.md  setup-and-registration.md  tools-and-routing.md
mcp-server/src/: availability.ts  config.ts  engine-client.ts  freecycle-client.ts  index.ts  ollama-client.ts  router.ts  secure-client.ts  task-signaling.ts  tools.ts  wake-on-lan.ts
src/: agent_server.rs  autostart.rs  config.rs  exposure_monitor.rs  gpu_monitor.rs  lib.rs  lockfile.rs  logging.rs  main.rs  model_catalog.rs  notifications.rs  ollama.rs  security.rs  shortcut.rs  state.rs  tray.rs
tests/: agent_workflow.rs  proxy_routes.rs
